--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -7,11 +7,28 @@
 </ion-header>
 
 <ion-content [fullscreen]="true">
+  <!-- Header condensa per la parte di scorrimento -->
   <ion-header collapse="condense">
     <ion-toolbar>
       <ion-title size="large">Tab 2</ion-title>
     </ion-toolbar>
   </ion-header>
+
+  <!-- Contenuto della pagina -->
+  <div class="container">
+    <ion-button expand="full" (click)="takePhoto()">Scatta una Foto</ion-button>
+    <br/>
+    <img id="photo" src="" alt="Foto scattata" style="max-width: 100%; max-height: 300px; display: none;">
+  </div>
+
+
+  <ion-button expand="full" (click)="startScan()">Scansiona QR Code</ion-button>
+  
+  <!-- Contenitore per il video della fotocamera -->
+  <div id="qr-reader" style="width: 100%; height: 400px;"></div>
+  <div *ngIf="qrCodeResult">
+    <p>Risultato QR Code: {{ qrCodeResult }}</p>
+  </div>
 
   <app-explore-container name="Tab 2 page"></app-explore-container>
 </ion-content>
